i updated my CV

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>adress deans complex board bazar </p>
     <p>03009321248</p>
     <h2>OBJECTIVE</h2>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ut error quidem vel nisi ipsum necessitatibus distinctio consectetur labore nesciunt eligendi tempore, doloremque pariatur fuga optio dolor eaque atque minima.</p>
 </body>
 </html>
